--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "buildCommand": "yarn build",
-  "outputDirectory": ".next",
+  "outputDirectory": "frontend/.next",
   "installCommand": "yarn install",
   "devCommand": "yarn dev",
-  "framework": "nextjs",
-  "rootDirectory": "frontend"
+  "framework": "nextjs"
 }
