--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --debug",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "^1.1.1",
     "@privy-io/react-auth": "^3.3.0",
     "@tanstack/react-query": "^5.90.5",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -21,6 +22,7 @@
     "wagmi": "^2.18.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
