--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.1",
+    "@heroicons/react": "^2.2.0",
     "@privy-io/react-auth": "^3.3.0",
     "@tanstack/react-query": "^5.90.5",
     "@vercel/speed-insights": "^1.2.0",
