--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@1inch/cross-chain-sdk": "^1.0.0",
     "@coinbase/onchainkit": "^1.1.1",
     "@heroicons/react": "^2.2.0",
     "@privy-io/react-auth": "^3.3.0",
     "@tanstack/react-query": "^5.90.5",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
+    "ethers": "^6.13.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
