--- a/backend/env.example
+++ b/backend/env.example
@@ -2,6 +2,9 @@
 PORT=5001
 NODE_ENV=development
 
+# CORS Configuration (for local development)
+FRONTEND_URL=http://localhost:3000
+
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/fuzemon
 # For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/fuzemon
