--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@1inch/cross-chain-sdk": "^1.0.0",
+    "@1inch/cross-chain-sdk": "github:21inches/cross-chain-sdk",
     "@coinbase/onchainkit": "^1.1.1",
     "@heroicons/react": "^2.2.0",
     "@privy-io/react-auth": "^3.3.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "^5.90.5",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
