--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "ethers": "^6.13.4",
+    "lightweight-charts": "^5.0.9",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
