smart wallet basic integration

--- a/frontend/env.local.example
+++ b/frontend/env.local.example
@@ -3,3 +3,10 @@ NEXT_PUBLIC_API_URL=http://localhost:5001
 
 # Privy Configuration
 NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id_here
+
+# Smart Wallet Configuration
+NEXT_PUBLIC_SMART_WALLET_FACTORY_MONAD=0x...
+NEXT_PUBLIC_USDC_ADDRESS_MONAD=0x...
+NEXT_PUBLIC_UNIVERSAL_ROUTER_MONAD=0x...
+NEXT_PUBLIC_POOL_MANAGER_MONAD=0x...
+NEXT_PUBLIC_PERMIT2_MONAD=0x...
